--- a/briar-android/src/main/res/values-ru/strings.xml
+++ b/briar-android/src/main/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
   <!--Setup-->
   <string name="setup_title">Добро пожаловать в Briar</string>
   <string name="setup_name_explanation">Ваш псевдоним будет показан рядом с любым публикуемым вами контентом. Его нельзя изменить после создания аккаунта.</string>
@@ -127,6 +127,7 @@
   <string name="date_no_private_messages">Нет сообщений.</string>
   <string name="no_private_messages">Нет сообщений для отображения</string>
   <string name="message_hint">Печатает сообщение</string>
+  <string name="set_alias_button">Изменить</string>
   <string name="delete_contact">Удалить контакт</string>
   <string name="dialog_title_delete_contact">Подтвердите удаление контакта</string>
   <string name="dialog_message_delete_contact">Вы действительно хотите удалить этот контакт и все связанные с ним сообщения?</string>
