--- a/briar-android/src/main/res/values-sr/strings.xml
+++ b/briar-android/src/main/res/values-sr/strings.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
   <!--Setup-->
   <string name="setup_title">Dobrodosli u Briar</string>
   <string name="setup_name_explanation">Vas nadimak ce biti prikazan pored sadrzaja posta. Nemozete ga promijeniti poslije kreiranja racuna.</string>
